Fixing overflow mistake

--- a/source/stylesheets/pages/_shared.sass
+++ b/source/stylesheets/pages/_shared.sass
@@ -29,3 +29,4 @@ body
 
     #container
       padding: 2em 0
+      overflow: visible
